tests/baselines/reference/thisInSuperCall(strict=true).errors.txt
thisInSuperCall.ts(7,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
thisInSuperCall.ts(14,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
thisInSuperCall.ts(19,17): error TS7006: Parameter 'p' implicitly has an 'any' type.
thisInSuperCall.ts(20,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== thisInSuperCall.ts (4 errors) ====
    class Base { 
        constructor(x: any) {}
    }
    
    class Foo extends Base {
        constructor() {
            super(this); // error: "super" has to be called before "this" accessing
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }
    
    class Foo2 extends Base {
        public p = 0;
        constructor() {
            super(this); // error
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }
    
    class Foo3 extends Base {
        constructor(public p) {
                    ~~~~~~~~
!!! error TS7006: Parameter 'p' implicitly has an 'any' type.
            super(this); // error
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }